--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>NekoList</title>
+    <title>Nacho - 海外日本人コミュニティ</title>
   </head>
   <body>
     <div id="root"></div>
